Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,6 +5,8 @@ show_custom_links: true
 custom_links:
   - title: Off-Market Homes
     url: /off-market/
+  - title: Testimonials
+    url: /testimonials/    
 show_custom_links_new_tab: true
 custom_links_new_tab:
   - title: Home Valuation
