--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,56 +1,61 @@
 audit_header: false
 title: Houston Real Estate Video Blog with Mustafa Faiz
-description: Our mission at RE/MAX Signature is to be your best resource for Houston real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The RE/MAX Signature, your professional Houston Real Estate Agents.
+description: >-
+  Our mission at RE/MAX Signature is to be your best resource for Houston real
+  estate advice. Whether you are a buyer, seller, or investor, our team of
+  professionals can answer any questions you might have about real estate. If
+  you are looking to buy or sell a home, you can get all the information and the
+  latest updates, tips, and tricks from The RE/MAX Signature, your professional
+  Houston Real Estate Agents.
 show_custom_links: true
 custom_links:
   - title: Testimonials
-    url: /testimonials/ 
+    url: /testimonials/
   - title: Off-Market Homes
     url: /off-market/
 show_custom_links_new_tab: true
 custom_links_new_tab:
   - title: Home Valuation
-    url: https://cloudattract.com/55ace7
-
+    url: 'https://web.har.com/aws/disphomeworth.cfm?siteType=aws&cid=633250'
 client:
   name: Mustafa Faiz
   title:
   license_number:
-  about_markdown: |
-    Prior to his real estate career, Mustafa served with the U.S. Army in Afghanistan as a linguist. He is fluent in four languages and loves meeting new people. Mustafa and his team are committed to providing quality service and outstanding experience for buyers and sellers. Mustafa offers a tailored service to each client and aims to exceed client expectations every time. Clients love that he is able to sell homes before they get listed and that he can find homes that are not even listed on the open market.
+  about_markdown: >
+    Prior to his real estate career, Mustafa served with the U.S. Army in
+    Afghanistan as a linguist. He is fluent in four languages and loves meeting
+    new people. Mustafa and his team are committed to providing quality service
+    and outstanding experience for buyers and sellers. Mustafa offers a tailored
+    service to each client and aims to exceed client expectations every time.
+    Clients love that he is able to sell homes before they get listed and that
+    he can find homes that are not even listed on the open market.
 
-    What distinguishes Mustafa and team is his focus on delivering a higher level of customer service, using the newest technologies available in the real estate market. Mustafa is careful to help clients find the best of city living, revealing all of the best kept secrets of Houston with extensive knowledge of proper due-diligence, inventory, locations, and recent construction. Mustafa's knowledge, helpfulness, and communication are what his clients say they enjoy the most about his service.
+
+    What distinguishes Mustafa and team is his focus on delivering a higher
+    level of customer service, using the newest technologies available in the
+    real estate market. Mustafa is careful to help clients find the best of city
+    living, revealing all of the best kept secrets of Houston with extensive
+    knowledge of proper due-diligence, inventory, locations, and recent
+    construction. Mustafa's knowledge, helpfulness, and communication are what
+    his clients say they enjoy the most about his service.
   brand: RE/MAX Signature
   brokerage:
   market: Houston
-  address: 820 Gessner Rd. #120 Houston, TX 77024
+  address: 820 Gessner Rd.
   phone: 281-886-8242
   phone_type:
   phone2:
   phone2_type:
   email: mfaiz@remax.net
-  url: https://www.har.com/mustafa-faiz/agent_mfai
-
-# CTAs:
-#   first_CTA_text: Home Valuation
-#   first_CTA_URL: https://cloudattract.com/55ace7
-#   second_CTA_text: Home Search
-#   second_CTA_URL: /homesearch/
-
+  url: 'https://www.har.com/mustafa-faiz/agent_mfai'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/001.jpg
-    CTA_title: "What’s Your Houston Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free Home Value Report"
-    CTA_url: https://cloudattract.com/55ace7
-
-# second_sidebar_CTA:
-#   - CTA_image_path2: /img/cta-images/002.jpg
-#     CTA_title2: "Looking for a Houston Home?"
-#     CTA_text2: "Search the entire MLS for your Houston home."
-#     CTA_link_text2: "Search the MLS"
-#     CTA_url2: /homesearch/
-
+    CTA_title: What’s Your Houston Home Worth?
+    CTA_text: >-
+      Are you thinking of selling your home or interested in learning about home
+      prices in your neighborhood? We can help you.
+    CTA_link_text: Free Home Value Report
+    CTA_url: 'https://cloudattract.com/55ace7'
 lender:
   show_section: false
   header_text: Preferred Lender
@@ -63,12 +68,11 @@ lender:
   phone:
   email:
   url:
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/RealtorMustafa
+  facebook_url: 'https://www.facebook.com/RealtorMustafa'
   linkedin_url:
-  youtube_url: https://www.youtube.com/channel/UCTXV5fvQc6ZiPt8VIrOnsfQ/videos
+  youtube_url: 'https://www.youtube.com/channel/UCTXV5fvQc6ZiPt8VIrOnsfQ/videos'
   twitter_url:
   instagram_url:
   pinterest_url:
@@ -76,46 +80,53 @@ socials:
   trulia_url:
   yelp_url:
   podcast_url:
-
 podcast:
-  title: 'Houston Real Estate Podcast with Mustafa Faiz'
-  categories: Education
+  title: Houston Real Estate Podcast with Mustafa Faiz
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Houston Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from RE/MAX Signature - your professional Houston Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Houston, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Mustafa Faiz'
-
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Houston
+    Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from RE/MAX Signature - your professional
+    Houston Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in Houston, home
+    selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
+  author: Mustafa Faiz
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
   hero_text: Houston Real Estate Video Blog
-  hero_background_hex: '#999'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
   post_cta_image: /img/home-value.jpg
   post_cta_image2: /img/home-search.jpg
-
 site_colors:
   brand_color: '#e11b22'
   theme_color: '#0054a4'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: black
-
+  shadow_color: '#000000'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
   button_padding_height_number: 15
   button_border_color: '#ffffff'
-  button_background_color: transparent
+  button_background_color: 'rgba(0, 0, 0, 0)'
   button_text_color: '#123456'
   secondary_button_border_color: '#ffffff'
   secondary_button_background_color: 'rgba(0, 0, 0, 0)'
