Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -55,7 +55,7 @@ sidebar_CTA:
       Are you thinking of selling your home or interested in learning about home
       prices in your neighborhood? We can help you.
     CTA_link_text: Free Home Value Report
-    CTA_url: 'https://cloudattract.com/55ace7'
+    CTA_url: 'https://web.har.com/aws/disphomeworth.cfm?siteType=aws&cid=633250'
 lender:
   show_section: false
   header_text: Preferred Lender
