Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ custom_links:
 show_custom_links_new_tab: true
 custom_links_new_tab:
   - title: Home Valuation
-    url: 'https://web.har.com/aws/disphomeworth.cfm?siteType=aws&cid=633250'
+    url: 'https://www.har.com/sell_your_home?agent=mfaiz'
 client:
   name: Mustafa Faiz
   title:
