--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -71,7 +71,7 @@ lender:
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/RealtorMustafa'
-  linkedin_url: ttps://www.linkedin.com/in/realtorfaiz/
+  linkedin_url: https://www.linkedin.com/in/realtorfaiz/
   youtube_url: 'https://www.youtube.com/channel/UCTXV5fvQc6ZiPt8VIrOnsfQ/videos'
   twitter_url:
   instagram_url:
