Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,22 +22,7 @@ client:
   title:
   license_number:
   about_markdown: >-
-    Prior to his real estate career, Mustafa served with the U.S. Army in
-    Afghanistan as a linguist. He is fluent in four languages and loves meeting
-    new people. Mustafa and his team are committed to providing quality service
-    and outstanding experience for buyers and sellers. Mustafa offers a tailored
-    service to each client and aims to exceed client expectations every time.
-    Clients love that he is able to sell homes before they get listed and that
-    he can find homes that are not even listed on the open market.
-
-
-    What distinguishes Mustafa and team is his focus on delivering a higher
-    level of customer service, using the newest technologies available in the
-    real estate market. Mustafa is careful to help clients find the best of city
-    living, revealing all of the best kept secrets of Houston with extensive
-    knowledge of proper due-diligence, inventory, locations, and recent
-    construction. Mustafa's knowledge, helpfulness, and communication are what
-    his clients say they enjoy the most about his service.
+    As a RE/MAX® agent, I'm dedicated to helping my clients find the home of their dreams. Whether you are buying or selling a home or just curious about the local market, I would love to offer my support and services. I know the local community — both as an agent and a neighbor — and can help guide you through the nuances of our local market. With access to top listings, a worldwide network, exceptional marketing strategies and cutting-edge technology, I work hard to make your real estate experience memorable and enjoyable. I look forward to the opportunity to work with you. Please don't hesitate to contact me today!
   brand: RE/MAX Signature
   brokerage:
   market: Houston
