--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -43,10 +43,10 @@ sidebar_CTA:
     CTA_url: 'https://www.har.com/sell_your_home?agent=mfaiz'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/002.jpg
-    CTA_title2: 
+    CTA_title2: Lets Get in touch 
     CTA_text2: Talk to RE/MAX® agent Mustafa Faiz
     CTA_link_text2: "Contact Me Today"
-    CTA_url2: https://homesguidehouston.com/
+    CTA_url2: https://homesguidehouston.com/contact
 lender:
   show_section: false
   header_text: Preferred Lender
